small wip on buttonsg

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -740,9 +740,9 @@
 
                 <!-- pay maintenance -->
                 <div class="flex flex-col items-center">
-                    <a class="calc-cost" title='{{localize ' swnr.sheet.ship.calc-cost'}}'><i
+                    <a class="pay-maintenance" title='{{localize ' swnr.sheet.ship.pay-maintenance'}}'><i
                         class="fas fa-2x fa-cash-register"></i></a>
-                    <label>{{localize 'swnr.sheet.ship.calc-cost'}}</label>
+                    <label>{{localize 'swnr.sheet.ship.pay-maintenance'}}</label>
                 </div>
               </div>
 
@@ -792,9 +792,9 @@
 
                 <!-- make payment -->
                 <div class="flex flex-col items-center">
-                    <a class="calc-cost" title='{{localize ' swnr.sheet.ship.calc-cost'}}'><i
-                        class="fas fa-2x fa-cash-register"></i></a>
-                    <label>{{localize 'swnr.sheet.ship.calc-cost'}}</label>
+                    <a class="make-payment" title='{{localize ' swnr.sheet.ship.make-payment'}}'><i
+                        class="fas fa-2x fa-tools"></i></a>
+                    <label>{{localize 'swnr.sheet.ship.make-payment'}}</label>
                 </div>
               </div>
             </div>
