payment partially working

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -692,7 +692,7 @@
           
                 <!-- calc cost -->
                  <div class="flex flex-col items-center">
-                    <a class="calc-cost" title='{{localize ' swnr.sheet.ship.calc-cost'}}'><i
+                    <a class="calc-cost" title='{{localize 'swnr.sheet.ship.calc-cost'}}'><i
                         class="fas fa-2x fa-cash-register"></i></a>
                     <label>{{localize 'swnr.sheet.ship.calc-cost'}}</label>
                   </div>
@@ -739,9 +739,9 @@
                 </div>
 
                 <!-- pay maintenance -->
-                <div class="flex flex-col items-center">
-                    <a class="pay-maintenance" title='{{localize ' swnr.sheet.ship.pay-maintenance'}}'><i
-                        class="fas fa-2x fa-cash-register"></i></a>
+                <div class="flex flex-col items-center text-center">
+                    <a class="pay-maintenance" title='{{localize 'swnr.sheet.ship.pay-maintenance'}}'><i
+                        class="fas fa-2x fa-tools"></i></a>
                     <label>{{localize 'swnr.sheet.ship.pay-maintenance'}}</label>
                 </div>
               </div>
@@ -791,9 +791,9 @@
                 </div>
 
                 <!-- make payment -->
-                <div class="flex flex-col items-center">
-                    <a class="make-payment" title='{{localize ' swnr.sheet.ship.make-payment'}}'><i
-                        class="fas fa-2x fa-tools"></i></a>
+                <div class="flex flex-col items-center text-center">
+                    <a class="make-payment" title='{{localize 'swnr.sheet.ship.make-payment'}}'><i
+                        class="fas fa-2x fa-money-bill-wave"></i></a>
                     <label>{{localize 'swnr.sheet.ship.make-payment'}}</label>
                 </div>
               </div>
