updates to adding cyberware desc. small CSS fix to give spacing between li item-entry

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -27,6 +27,11 @@ a:hover {
 .tabs .item.active {
   @apply text-shadow-gray-600;
 }
+
+li.item-entry {
+  padding-bottom:5px;
+}
+
 div.editor .editor-content{
   min-height: 100px;
   resize: vertical;
