--- a/src/templates/actors/fragments/skill.html
+++ b/src/templates/actors/fragments/skill.html
@@ -20,5 +20,11 @@
     >
       <i class="fas fa-trash"></i>
     </a>
+    <a
+      class="item-control item-level-up text-gray-600 hover:text-red-600 transition-colors"
+      title="{{localize 'swnr.sheet.level-up'}}"
+    >
+      <i class="fas fa-level-up-alt"></i>
+    </a>
   </div>
 </div>
