--- a/src/templates/items/cyberware-sheet.html
+++ b/src/templates/items/cyberware-sheet.html
@@ -22,7 +22,7 @@
       {{localize 'swnr.sheet.system-strain'}}:
       <input
         class="w-64 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-        type="text" name="data.strain" value="{{data.data.strain}}" />
+        type="number" name="data.strain" data-dtype="Number" value="{{data.data.strain}}" />
     </div>
 
     <!-- tl -->
