--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -178,9 +178,14 @@
               data-dtype="Number"
             />
           </div>
-          <label class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow"
-            >{{localize 'swnr.sheet.hp'}} <i class="fas fa-dice-d20"></i
-          ></label>
+          <span>
+            <label class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow"
+              >{{localize 'swnr.sheet.hp'}} <i class="fas fa-dice-d20"></i
+            ></label>  
+            <a class="rest-button pl-1.5" title='{{localize 'swnr.sheet.rest'}}'>
+              <i class="fas fa-bed"></i>
+            </a>
+          </span>
         </div>
 
         <div class="system flex flex-col items-center justify-center">
