--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -113,16 +113,7 @@ $shadowColor: black;
 }
 
 .item-titles {
-  padding: 4px 0;
-  padding-left: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.9);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
-  font-weight: 300;
-  font-size: 13px;
-  //background: url("/systems/wwn/assets/back.png");
-  background-color: #000;
-  color: white;
-  margin-top: 7px;
+  @apply bg-warmGray-700 border border-warmGray-900 py-4 px-2 text-bold;
 }
 
 .item-working {
