--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -442,7 +442,7 @@
               type=actor.data.data.type actor=actor}}
             </div>
           </div>
-          <div class="flex gap-1">
+          <div class="flex gap-3">
             <div class="flex-grow">
               <h4 class="text-lg underline text-center">
                 {{localize 'swnr.sheet.tabs.weapons'}}
@@ -477,15 +477,47 @@
                 type=actor.data.data.type}} {{/each}}
               </div>
             </div>
-            <div class="flex-grow">
-              <h4 class="text-lg underline text-center">
-                {{localize 'swnr.sheet.tabs.powers'}}
-              </h4>
-              <div class="flex gap-1 flex-col">
-                {{#each itemTypes.power as |item id|}} {{>
-                "systems/swnr/templates/actors/fragments/power.html" item=item
-                type=actor.data.data.type}} {{/each}}
-              </div>
+          </div>
+          <div class="flex-grow">
+            {{!-- Old Powers. Leaving to maybe gate on flag.
+            <h4 class="text-lg underline">
+              {{localize 'swnr.sheet.tabs.powers'}}
+            </h4>
+            <div class="flex gap-1 flex-col">
+              {{#each itemTypes.power as |item id|}} {{>
+              "systems/swnr/templates/actors/fragments/power.html" item=item
+              type=actor.data.data.type}} {{/each}}
+            </div> --}}
+            <div class="powers-list pr-0.5 mt-8">
+              <li class="item-titles flexrow">
+                <!--<div class="item-caret"><!--<i class="fas fa-caret-down"></i></div>-->
+                <div class="item-name pr-2.0">{{localize 'swnr.sheet.power'}} </div>
+                <div class="item-source text-center">{{localize 'swnr.sheet.source'}} </div>
+                <div class="item-level pr-2.0 text-center">{{localize 'swnr.sheet.level'}}</div>
+                <div class="item-controls text-center flex-shrink">
+                </div>
+              </li>
+              <ol class="item-list">
+              {{#each actor.data.data.powers as |pwr i|}}
+                <li class="item-entry">
+                  <div class="item flexrow py-3.0" data-item-id="{{pwr.id}}">
+                    <div class="item-name item-click item-rollable flexrow pr-2.0">                
+                      <a>{{pwr.name}}</a>
+                    </div>
+                    <div class="item  text-center" style="text-transform: capitalize;">
+                      {{pwr.data.data.source}}
+                    </div>
+                    <div class="item pr-2.0 text-center">
+                      {{pwr.data.data.level}}
+                    </div>
+                    <div class="item-controls text-center flex-shrink text-gray-600 hover:text-purple-800 transition-colors">
+                      <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'>
+                        <i class="fas fa-edit"></i></a>
+                      <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                          class="fas fa-trash"></i></a>
+                    </div>
+                  </li>
+              {{/each}}
             </div>
           </div>
         </div>
@@ -598,9 +630,9 @@
                           {{trim item.data.data.description 60}}
                         </div>
                         <div class="item-controls w-20">
-                          <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'>
+                          <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                             <i class="fas fa-edit"></i></a>
-                          <a class="item-control item-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                          <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                               class="fas fa-trash"></i></a>
                         </div>
                     </li>
@@ -634,9 +666,9 @@
                           {{item.data.data.effect}}
                         </div>
                         <div class="item-controls text-center flex-shrink">
-                          <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'>
+                          <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                             <i class="fas fa-edit"></i></a>
-                          <a class="item-control item-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                          <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                               class="fas fa-trash"></i></a>
                         </div>
                     </li>
