--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -387,9 +387,9 @@
                               <i
                                 class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
                             </a>
-                            <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'><i
+                            <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'><i
                                 class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                            <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                                 class="fas fa-trash"></i></a>
 
                           </div>
@@ -438,9 +438,9 @@
                               <i
                                 class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
                             </a>
-                            <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'><i
+                            <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'><i
                                 class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                            <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                                 class="fas fa-trash"></i></a>
 
                           </div>
@@ -483,9 +483,9 @@
                               <i
                                 class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
                             </a>
-                              <a class="item-control item-edit" title='{{localize 'swnr.sheet.edit-item'}}'>
+                              <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                                 <i class="fas fa-edit"></i></a>
-                              <a class="item-control item-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                              <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                                   class="fas fa-trash"></i></a>
 
                             </div>
@@ -648,7 +648,7 @@
                           <a>{{crew.name}}</a>
                         </div>
                         <div class="item-controls">
-                          <a class="item-control crew-delete" title='{{localize 'swnr.sheet.delete-item'}}'><i
+                          <a class="item-control crew-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                               class="fas fa-trash"></i></a>
                         </div>
                     </li>
