--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -28,7 +28,8 @@ a:hover {
   @apply text-shadow-gray-600;
 }
 
-li.item-entry {
+li.item-entry
+ {
   padding-bottom:5px;
 }
 
@@ -107,17 +108,17 @@ $shadowColor: black;
 }
 
 .sheet-button {
-  @apply flex rounded-lg px-1.5 py-1 border border-warmGray-900 bg-warmGray-700
+  @apply flex rounded-lg px-1.5 py-1 border border-warmGray-900 bg-warmGray-700 
     hover:bg-warmGray-500 hover:border-warmGray-700 text-warmGray-200
     hover:text-black transition-colors cursor-pointer;
 }
 
 .item-titles {
-  @apply bg-warmGray-700 border border-warmGray-900 py-4 px-2 text-bold;
+  @apply bg-warmGray-700 border border-warmGray-900 py-0.5 px-2 mt-2 font-bold text-white;
 }
 
 .item-working {
-  color: rgba(0, 0, 0, 0.2);
+  color: rg ba(0, 0, 0, 0.2);
 }
 
 .item-image {
